<resources>
    <string name="app_name">WaveTune</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="like_btn">Like</string>
    <string name="playlist_btn">Playlists</string>
    <string name="total_songs">Total songs: </string>
    <string name="player_appbar_text">WaveTune</string>
    <string name="song_name">Song Name</string>
    <string name="start_time">00:00</string>
    <string name="end_time">Loading...</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="previous_btn">Previous</string>
    <string name="pause_btn">Pause</string>
    <string name="next_btn">Next</string>
    <string name="back_btn">Back</string>
    <string name="like_empty">Like_Empty</string>
    <string name="playlists">PlayList</string>
    <string name="favourite">Favourite</string>
    <string name="plus_btn">Plus</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="music_player">Music Player</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to \nWave Tune!</string>
    <string name="nav_feedback">FeedBack</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_exit">Exit</string>
    <string name="song_album">Song Album</string>

</resources>